# MDNAC

./: .env.example  .gitignore  README.md  config.yaml  install.ps1  install.sh  install.tesla.sh  instruction.16gb.yaml  pyproject.toml  tokenizer_map.json  train.16gb.yaml  train.resume.yaml  train.windows.yaml  train.yaml  train.yaml.bak
api/: .gitignore  README.md  config.structure.yaml  config.yaml  pyproject.toml  runpod_app.py  runpod_structure_app.py  server.py
api/ai_agent/: __init__.py  schemas.py  server.py
api/ai_agent/agent/: __init__.py  clarify.py  graph.py  human_in_loop.py  nodes.py  prompts.py  protein_graph.py  state.py
api/ai_agent/config/: __init__.py  agent.yaml  prompts.yaml  settings.py
api/ai_agent/models/: __init__.py  base.py  openai_model.py
api/ai_agent/skills/: __init__.py  loader.py
api/ai_agent/skills/grounded-answer/: SKILL.md
api/ai_agent/skills/protein-span-completion/: SKILL.md
api/ai_agent/skills/public-research/: SKILL.md
api/ai_agent/tools/: __init__.py  exa_search.py  protein_semantic_search.py  uniprot_search.py
api/docs/: sequence-completion.md  structure-predictor-openfold.md
api/interfere/: __init__.py  artifacts.py  config.py  inference.py  onnx_runtime.py  server.py  session.py  tokenizer.py
api/structure_predictor/: __init__.py  config.py  openfold.py  server.py
api/structure_predictor/simulation/: __init__.py  celery_app.py  dispatcher.py  jobs.py  openmm_runner.py  runpod.py  tasks.py
api/tools/: __init__.py
api/tools/onnx/: README.md  __init__.py  export_checkpoint.py
cmd/: README.md  build_profile_pretrain_from_instruction_jsonl.cmd  build_profile_pretrain_from_instruction_jsonl.py  build_profile_pretrain_from_instruction_jsonl.sh  build_refseq_profile_text.cmd  build_refseq_profile_text.py  build_refseq_profile_text.sh  concat_text_files.cmd  concat_text_files.sh  dedupe_refseq_profile_text.cmd  dedupe_refseq_profile_text.py  dedupe_refseq_profile_text.sh  download_http_index.cmd  download_http_index.py  download_http_index.sh  downsample_instruction_jsonl.cmd  downsample_instruction_jsonl.sh
cmd/data/: build_refseq_profile_text.cmd  build_refseq_profile_text.py  build_refseq_profile_text.sh  concat_text_files.cmd  concat_text_files.py  concat_text_files.sh  dedupe_refseq_profile_text.cmd  dedupe_refseq_profile_text.sh  download_http_index.cmd  download_http_index.py  download_http_index.sh
cmd/install/: install.ps1  install.sh  install.tesla.sh
cmd/instruction/: build_profile_pretrain_from_instruction_jsonl.cmd  build_profile_pretrain_from_instruction_jsonl.py  build_profile_pretrain_from_instruction_jsonl.sh  downsample_instruction_jsonl.cmd  downsample_instruction_jsonl.py  downsample_instruction_jsonl.sh
config/: README.md  instruction.16gb.yaml  profile_span_completion.32gb.yaml  profile_span_completion.yaml  train.16gb.yaml  train.32gb.yaml  train.64gb.2gpu.yaml  train.resume.yaml  train.yaml
data/checkpoints/protein_from_scratch/: vram_16gb_report.json
docker/: docker-compose.yaml
interfere/: __init__.py  artifacts.py  inference.py  onnx_runtime.py  session.py
interfere/backends/: __init__.py  base.py  qwen3_5.py  shared.py
libs/: notebook_runtime.py
libs/core/: __init__.py  app.py  fusion.py  interfaces.py  lora.py
libs/core/mdc/: __init__.py  config.py  linear_attention.py  model.py
libs/core/pretrain/: __init__.py  distributed.py  file_concat.py  instruction_downsample.py  lr_schedule.py  profile_generation.py  profiled.py  protein_lm.py  refseq_local.py  sampling.py  training.py  training_config.py
libs/core/structure/: __init__.py  cache.py  (+11 more)
libs/data/: __init__.py  config.py  contracts.py  entities.py  hub.py
libs/instruction/: __init__.py  data.py  schema.py  trainer.py
libs/protein_completion/: __init__.py  conversion.py  masking.py  validation.py
models/gemma4/: __init__.py  ch05.py  gemma4_transformers.py  pretrained.py
models/qwen3_5/: __init__.py  ch02.py  ch05.py  ch07.py  export.py  hf_utils.py  instruction.py  modeling.py  pretrained.py  qwen3_5_transformers.py  reasoning.py
next/: .dockerignore  Dockerfile  README.md  package-lock.json  package.json
next/app/: globals.css  layout.tsx  page.tsx
next/components/: demo.tsx
next/lib/: mdnac.ts
notebooks/hyperparameter_tuning/: 01_optuna_adamw_pretrain_and_completion.ipynb
notebooks/stage_2_foundation_model/: 03_pretrain_protein_from_scratch.ipynb  03a_streaming_train_step_by_step.ipynb  04_resume_protein_pretrain.ipynb  05_update_instruction_3di_from_s3.ipynb  protein_pretrain.ipynb  protein_pretrain_windows.ipynb  select_parts_cell.py
notebooks/stage_3_instruction_training/: 01_instruction_train.ipynb  02_instruction_inference.ipynb  02_instruction_train_linux.ipynb  03_instruction_model_evaluation.ipynb
notebooks/stage_3_profile_completion/: 01_build_span_completion_instruction.ipynb  02_build_span_completion_profile_tokenizer.ipynb  02_profile_aware_span_completion_train.ipynb  03_profile_aware_span_completion_train.ipynb
src/mdnac/: __init__.py
temp/: slim_instruction_jsonl.py  split_and_upload_instruction.py  test_input.jsonl  test_output.jsonl
tests/: test_ai_agent_api.py  test_candidate_validation.py  test_concat_text_files.py  test_contact_constraints.py  test_data_pipeline.py  test_fused_profile_eos_loss.py  test_http_index_download.py  test_instruction_3di.py  test_instruction_downsample.py  test_instruction_streaming.py  test_lr_schedule.py  test_mdc_core.py  test_mdc_profile_pretrain.py  test_object_store_catalog.py  test_openfold_structure_api.py  test_openmm_simulation_api.py  test_protein_completion.py  test_protein_lm_pretrain.py  test_protein_memory_config.py  test_protein_trainer_metrics.py  test_protein_training_config.py  test_qwen3_5_tokenizer.py  test_raw_data_pipeline.py  test_refseq_profile_text.py  test_resume_state.py  test_retry_policy.py  test_span_completion_api.py  test_streaming_minio_pretrain.py  test_training_runtime.py  test_unified_protein_ws.py
tools/ollama/: README.md  export_checkpoint.py
tools/onnx/: README.md  export_checkpoint.py
(+97 files in other folders)
