[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "microbial-dna-compiler"
version = "0.1.0"
description = "Training-data pipeline for microbial protein sequence sources."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "boto3>=1.34",
    "matplotlib>=3.8",
    "numpy>=1.26",
    "PyYAML>=6.0",
    "torch>=2.11",
]

[project.optional-dependencies]
structure = [
    "transformers>=4.40",
    "sentencepiece>=0.2",
]

[tool.setuptools.packages.find]
include = ["libs*"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
extend-exclude = [
    "LLMs-from-scratch",
    "notebooks",
]
