[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "microbial-dna-compiler"
version = "0.1.0"
description = "Training-data pipeline for microbial protein sequence sources."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "boto3>=1.34",
    "huggingface_hub>=0.20",
    "matplotlib>=3.8",
    "numpy>=1.26",
    "optuna>=4.0",
    "PyYAML>=6.0",
    "torch>=2.11,<2.12",
    "protobuf>=4.25",
    "tiktoken>=0.7",
]

[project.optional-dependencies]
agent = [
    "exa-py",
    "fastapi",
    "langchain-core",
    "langgraph",
    "openai",
    "pydantic",
    "PyYAML",
    "uvicorn",
]
# CUDA fast-path kernels for libs.core.mdc.linear_attention. Keep optional:
# CPU-only and some Windows setups can fail to build native CUDA extensions.
cuda = [
    "causal-conv1d>=1.6.2.post1",
    "flash-linear-attention>=0.5.0",
]
dev = [
    "pytest>=8.0",
    "ruff>=0.4",
]

[tool.setuptools.packages.find]
include = ["libs*", "src*"]

[tool.setuptools.package-dir]
"" = "."

[project.scripts]
mdnac-build-refseq = "src.mdnac.interfaces.cli:build_refseq_profile_text"
mdnac-concat = "src.mdnac.interfaces.cli:concat_text_files"
mdnac-dedupe-refseq = "src.mdnac.interfaces.cli:dedupe_refseq_profile_text"
mdnac-downsample = "src.mdnac.interfaces.cli:downsample_instruction_jsonl"
mdnac-build-profile-pretrain = "src.mdnac.interfaces.cli:build_profile_pretrain_from_instruction_jsonl"
mdnac-download-index = "src.mdnac.interfaces.cli:download_http_index"

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
extend-exclude = [
    "LLMs-from-scratch",
    "notebooks",
]

[tool.uv.sources]
torch = { index = "pytorch-cu130", marker = "sys_platform == 'win32'" }

[[tool.uv.index]]
name = "pytorch-cu130"
url = "https://download.pytorch.org/whl/cu130"
explicit = true
